engines/bastion/app/assets/bastion/stylesheets/bastion.scss
@import "compass";
@import "alchemy/components/normalize";

* {
  @include box-sizing(border-box);
}

@import "katello_colors";

$font_path: "../alchemy/";
$FontAwesomePath: "../font-awesome/font";
$spritePath: url("../alchemy/icons/action-icons.png");

@import "font-awesome/font-awesome";

@import "alchemy-forms/forms";
@import "alchemy-buttons/buttons";
@import "alchemy/components/sprites/sprites";
@import "alchemy/components/flash_messages/flash_messages";
@import "alchemy/components/text/text";
@import "alchemy/components/flash_messages/flash_messages";

@import "helpers";
@import "header";
@import "nutupane";
@import "systems";
@import "typography";
@import "widgets/path_selector";
@import "widgets/org-switcher";

@import "widgets/tipsy_custom";
@import "jquery.tipsy";

@import "overrides";
@import "vars";

body {
  width: 100%;
  height: 100%;
  overflow: hidden;
}

a, a:visited, a:link, a:active {
  text-decoration: none;
  color: $linkfg_color;
}

a:hover {
  text-decoration: underline;
}

.maincontent {
  margin-top: 40px;
}

#legacy_indicator {
  position: absolute;
  color: rgb(255, 196, 90);
  top: 6px;
  left: 132px;
  font-family: Overpass;
}

.logo {
  text-indent: -5555px;
  width: 100px;
  height: 15px;
  display: block;
  margin-top: 5px;
}

.katello-logo {
  background: $katello_logo_img;
}

.headpin-logo {
  background: $headpin_logo_img;
}

[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
  display: none;
}

.status_icon {
  height: 15px;
  width: 15px;
  background: $status_icons_green_small;
  //margin: 2px 1px 1px 1px;

  &.green {
    background: $status_icons_green_small;
  }
  &.yellow {
    background: $status_icons_yellow_small;
  }
  &.red {
    background: $status_icons_red_small;
  }
}

[class*="icon-"] {
  &.green {
    color: $green2;
  }
  &.yellow {
    color: $o2;
  }
  &.red {
    color: $rh-red2;
  }
}

.inline-confirmation {
  @include border-radius(5px);
  @include box-shadow(rgba(0,0,0,0.4), 2px 2px 2px);
  background-color: white;
  border: 1px solid $border_color;
  padding: 15px;
  margin: 4px auto;
  width: 85%;

  .actions {
    float: right;
  }
}

.leading-icon {
  padding-right: 4px;
}

.trailing-icon {
  padding-left: 4px;
}

code {
  margin: 0 2px;
  padding: 0 5px;
  white-space: nowrap;
  border: 1px solid #eaeaea;
  background-color: #f8f8f8;
  border-radius: 3px;
  font-size: 12px;
  font-family: Consolas, "Liberation Mono", Courier, monospace;
}

pre code {
  margin: 0;
  padding: 0;
  white-space: pre;
  border: none;
  background: transparent;
  background-color: transparent;
  border: none;
}

pre {
  background-color: #f8f8f8;
  border: 1px solid #cccccc;
  font-size: 13px;
  line-height: 19px;
  overflow: auto;
  padding: 6px 10px;
  border-radius: 3px;
  margin: 15px 5px;
}

input[type="checkbox"] {
  vertical-align: text-bottom;
}

.form {
  input[type="text"],
  input[type="url"] {

    &.input-xlarge {
      width: 420px;
    }
    &.input-xxlarge {
      width: 560px;
    }
  }
  margin-bottom: 10px;
}

.loading-mask {
  left: 21%;
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 1;
  background: white;

  .icon-spinner {
    margin: 20% 0  0 30%;
  }
}

.well {
  border: 1px solid rgb(225, 225, 225);
  background: rgb(250, 250, 250);
  margin-top: 20px;
  padding: 8px;
}

